Contract Configurator 1.22.3
- Fixed reversed base open/closed requirement text (thanks Keniamin).

Contract Configurator 1.22.2
- Fix possible argumentOfPeriapsis issue (thanks Intrepidrd).

Contract Configurator 1.22.1
- Fixed issue with vessel identifier parsing introduced in 1.22.0.

Contract Configurator 1.22.0
- Added HasAntenna parameter (thanks Kerbas-ad-astra).
- Added Vessel.AntennaTransmitPower() and Vesse.AntennaRelayPower() (thanks Kerbas-ad-astra).
- Contract weights for celestial bodies are now set by Contract Configurator (affecting the likelihood of stock contracts generating for the given body).
- Added minArgumentOfPeriapsis and maxArgumentOfPeriapsis to Orbit parameter.
- Added horizontalDistance to VisitWaypoint.
- Make references to 'Sun' generic in SolarScience.cfg to fix Galileo compatibility (thanks SirBriguy).
- Added Sun() function to get the Sun in a non-name specific way.  Assumes a single star.
- Change enum parse to be case insensitive.
- Change Vessel Identifier parsing to allow a wider range of characters.
- Fixed format text for funding message in mission control (thanks JPLRepo).
- Fixed issue with NextUnreachedBody() call caching results (thanks severedsolo).

Contract Configurator 1.21.0
- Found new workaround for GetExportedTypes reflection issue (the "toolbar" issue).
- Added NextUnreachedBody() and NextUnreachedBodies() methods.
- Added Part.MassDry() and Part.MassWet() methods.
- Added CelestialBody.CanHaveSynchronousOrbit() method.
- Recompile Kerbal Konstructs integration.
- Fixed contract window text not updating for dynamic text (duration timers, etc.).

Contract Configurator 1.20.3
- Regenerate biome data for KSP 1.2 biomes (fixes Field Research "Rare Science" contracts, thanks FlatEric).
- Added RemoteTech integration back in.
- Fixed issue with nested contract groups not working (thanks jeisen).

Contract Configurator 1.20.2
- Support for KSP 1.2
- Allow contract title in mission control to span two lines.