@@ -1,5 +1,6 @@
 Contract Configurator 1.22.3
 - Fixed reversed base open/closed requirement text (thanks Keniamin).
+- Add logic to add waypoint icons into Waypoint Manager (happened automatically before KSP 1.2).
 
 Contract Configurator 1.22.2
 - Fix possible argumentOfPeriapsis issue (thanks Intrepidrd).
